@@ -4,26 +4,23 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import fr.associationrdj.backend.back.evenement.dto.EvenementDTOFindAll;
 import fr.associationrdj.backend.back.evenement.dto.EvenementDTOPostLocalDate;
 
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 
 public class EvenementService {
 
     private final EvenementRepository evenementRepository;
     private final ObjectMapper objectMapper;
-    @PersistenceContext
-    private EntityManager entityManager;
 
     public EvenementService(EvenementRepository evenementRepository, ObjectMapper objectMapper) {
         this.evenementRepository = evenementRepository;
@@ -69,27 +66,20 @@ public class EvenementService {
      * @return evenements
      */
     public List<Evenement> trierDatesCroissant(List<Evenement> evenements){
-        Collections.sort(evenements, Comparator.comparing(Evenement::getDateDebut));
+        evenements.sort(Comparator.comparing(Evenement::getDateDebut));
         return evenements;
     }
 
-    // ICIIIIIIIIIIIIIIIIIIII CA MARCHE PAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAS !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-//    /**
-//     *Filtre une liste d'evenements en retournant que les evenements postérieur à la date actuelle.
-//     * @return evenements
-//     */
-//    public List<Evenement> filtrerDates(List<Evenement> evenements) {
-//        LocalDate dateActuelle = LocalDate.now();
-//        return evenements.stream().filter(date -> !date.getDateDebut().isBefore(dateActuelle)).collect(Collectors.toList());
-//    }
-
-    // ICI je re-test en ecrivant la fonction en JSQL ... Mais j'ai pas fini !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    public List<Evenement> getDatesCommencantAujourdhui(List<Evenement> evenements) {
-        String jpql = "SELECT e.dateDebut FROM Evenement e WHERE FUNCTION('DATE', e.dateDebut) >= FUNCTION('CURRENT_DATE')";
-        entityManager.createQuery(jpql, Evenement.class).getResultList();
-        return evenements;
+    /**
+     *Filtre une liste d'evenements en retournant que les evenements postérieur à la date actuelle.
+     * @return evenements
+     */
+    public List<Evenement> findEvenementsFuturs(List<Evenement> evenements) {
+        LocalDate dateActuelle = LocalDate.now();
+        return evenements.stream()
+                .filter(evenement -> evenement.getDateDebut().isAfter(dateActuelle))
+                .collect(Collectors.toList());
     }
-
 
     /**
      * Retourne la liste des evenements à venir
@@ -97,9 +87,11 @@ public class EvenementService {
      */
     public List<EvenementDTOPostLocalDate> findAllPostLocalDate(){
         List<Evenement> evenements = evenementRepository.findAll();
-        getDatesCommencantAujourdhui(evenements);
-        trierDatesCroissant(evenements);
-        return evenements.stream().map(evenement -> objectMapper.convertValue(evenement, EvenementDTOPostLocalDate.class)).toList();
+        List<Evenement> evenementsFuturs = findEvenementsFuturs(evenements);
+        List<Evenement> evenementsTries = trierDatesCroissant(evenementsFuturs);
+        return evenementsTries.stream()
+                .map(evenement -> objectMapper.convertValue(evenement, EvenementDTOPostLocalDate.class))
+                .collect(Collectors.toList());
     }
 
 }
